# blender_pso2_tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  LICENSE  README.md  build-cli.py  install-blender.py  install.py  link.py  pyproject.toml  release.py  requirements-dev.txt  setup.py
pso2_tools/: __init__.py  aqp_info.py  blender_manifest.toml  classes.py  colors.py  convert.py  datafile.py  debug.py  dotnet.py  export_aqp.py  export_model.py  filelist.py  ice.py  import_aqp.py  import_dds.pyi  import_ice.py  import_model.py  import_props.py  import_search.py  material.py  mesh.py  metadata.py  object_category.py  object_colors.py  object_database.py  object_info.py  objects.py  objects_aqp.py  old_import_model.py  old_object_info.py  ornaments.py  parts.py  paths.py  preferences.py  props.py  reloader.py  scene_props.py  strenum.py  util.py  watcher.py
pso2_tools/panels/: appearance.py  mesh.py  ornaments.py
pso2_tools/shaders/: __init__.py  attributes.py  builder.py  classic.py  color_channels.py  colorize.py  colors.py  default_colors.py  group.py  mix.py  ngs.py  ngs_common.py  ngs_default.py  ngs_eye.py  ngs_hair.py  ngs_skin.py  shader.py  shader_0100.py  shader_1100.py  shader_1101.py  shader_1102.py  shader_1103.py  shader_1104.py  shader_1105.py  shader_1107.py  shader_1108.py  shader_1109.py  shader_1110.py  shader_1117.py  types.py
scripts/: blender.py  build.py  build_bin.py  build_package.py  build_typings.py  extension.py  install-blender.py  install.py  wheels.py
src/: .clang-format  CMakeLists.txt  dds.cpp  dds.hpp  import_dds.cpp  test.cpp
stubs/AquaModelLibrary/Data/PSO2/Aqua/: __init__.pyi
stubs/AquaModelLibrary/Data/Utility/: __init__.pyi
(+2 files in other folders)
