[project]
name = "pso2_tools"
authors = []
description = "Blender plugin for PSO2 models"
requires-python = ">= 3.10"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.23.5",
    "zamboni@git+https://github.com/dummycount/pyzamboni#egg=main",
]
dynamic = ["version", "readme"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pso2_tools"]

[tool.setuptools_scm]
write_to = "pso2_tools/_version.py"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
