[project]
name = "blender_pso2_tools"
version = "2.6.0"
requires-python = ">= 3.11"
dependencies = [
  "fake-bpy-module==20260218",
  "pip>=26.0.1",
  "prek>=0.3.3",
  "pyright>=1.1.408",
  "pythonnet==3.0.5",
  "ruff>=0.15.2",
  "watchdog==6.0.0",
]

[tool.pyright]
reportAbstractUsage = false
reportInvalidTypeForm = false
reportMissingImports = false
reportMissingModuleSource = false
reportUnboundVariable = false
extraPaths = [
  "C:/Program Files/Blender Foundation/Blender 5.1/5.1/scripts/addons_core",
]

[tool.ruff.lint]
select = [
  # flake8-builtins
  "A",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E4",
  "E7",
  "E9",
  # pyflakes
  "F",
  # flake8-implicit-str-concat
  "ISC",
  # perflint
  "PERF",
  # flake8-pie
  "PIE",
  # flake8-use-pathlib
  "PTH",
  # flake8-return
  "RET",
  # ruff
  "RUF",
  # flake8-simplify
  "SIM",
  # flake8-type-checking
  "TC",
  # pyupgrade
  "UP"
]
ignore = [
  # https://docs.astral.sh/ruff/rules/mutable-class-default/
  # bpy.types.Operator
  "RUF012"
]

[tool.setuptools]
packages = ["pso2_tools"]
